2018-02-20  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c:
	  ui_display_rotate() does nothing after a display is opened.

	* sdl2/ui_display.c:
	  - disp->display->resizing = 1 in ui_display_resize(), and
	    disp->display->resizing = 0 in SDL_WINDOWEVENT_SIZE_CHANGED.
	  - ui_display_rotate() does nothing after a display is opened.

	* sdl2/ui_window.c: If win->disp->display->resizing is 1, ui_window_resize()
	  does nothing.

	* sdl2/ui.h: 'resizing' is added to Display.

2018-02-19  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_window.c, sdl2/ui_display.c: Copy&paste with the use of
	  SDL_{Get|Set|Has}ClipboardText() is supported.

	* configure.in: Minor fixes.

2018-02-18  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.[ch]:
	  - The timing of calling present_displays() is fixed.
	  - SDL_WINDOWEVENT_FOCUS_{GAINED|LOST} events are processed.
	  - ui_display_resize(), ui_display_move(), ui_display_set_maximized()
	    and ui_display_set_title() are implemented.

	* wayland/ui_display.[ch]:
	  - 'int flag' is added to arguments of ui_display_set_maximized().

	* sdl2/ui_window.c:
	  #if defined(USE_WAYLAND) || defined(USE_SDL2)
	  => #ifndef MANAGE_ROOT_WINDOWS_BY_MYSELF

2018-02-18  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.c: SDL_TEXTEDITING event is processed, and preediting
	  text is shown.

	* vt_term.h, vt_parser.c: vt_term_preedit() is always compiled.

	* mlconfig/Makefile.in: Typo of LIBS2_win32 is fixed.

2018-02-18  Araki Ken  <arakiken@users.sf.net>

	* README, doc/{ja,en}/README.win32: Updated.

	* sdl2/ui_display.c:
	  - XKeyEvent::str and XKeyEvent::parser are set in poll_event().
	  - ui_display_logical_to_physical_coordinates() applies the position
	    of SDL_Window.

	* sdl2/ui_window.c:
	  ui_window_get_str() processes XKeyEvent::str and XKeyEvent::parser.

	* sdl2/ui.h: str and parser are added to XKeyEvent.

	* im_fcitx.c: ui_im_status_screen is used on sdl2.
