@@ -1,3 +1,7 @@
+2018-02-21  Araki Ken  <arakiken@users.sf.net>
+
+	* sdl2/ui_display.c: Minor fixes.
+
 2018-02-20  Araki Ken  <arakiken@users.sf.net>
 
 	* wayland/ui_display.c:
